updated class and added other fields

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js" integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"
+        integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="app/app.js"></script>
 </head>
+
 <body>
     <h1>Chat App</h1>
     <form class="form-join">
-        
+        <input type="text" name="name" id="name" maxlength="8" placeholder="username" size="5" required>
+        <input type="text" name="room" id="room" placeholder="chat room" size="5" required>
+        <button id="join-room">Join</button>
     </form>
-    <form>
-        <input type="text" placeholder="Your Message">
+    <form class="form-message">
+        <input type="text" placeholder="Your Message" id="message">
         <button>Send</button>
     </form>
-    <ul>
+    <ul class="chat-area">
     </ul>
-    <p class="activity"></p>
+    <p class="activity">
+    </p>
+    <p class="user-list">
+    </p>
+    <p class="room-list"></p>
 </body>
+
 </html>
